Add Cast SDK infrastructure: hooks, protocol, and script

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!-- DNS Prefetch for external resources -->
     <link rel="dns-prefetch" href="https://js.stripe.com" />
     <link rel="dns-prefetch" href="https://m.stripe.network" />
+    <link rel="dns-prefetch" href="https://www.gstatic.com" />
+    
+    <!-- Google Cast SDK -->
+    <script type="text/javascript" src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
     
     <!-- Primary Meta Tags -->
     <title>YearWheel - Visualisera och planera ditt år med AI</title>
